# sbce-automation

./: .gitignore  README.md  main.py  pyproject.toml  sbce_config.xlsx  sbce_config_esxi_ems_template.xlsx  sbce_config_esxi_standalone_template.xlsx  sbce_config_kvm_standalone_template.xlsx  skills-lock.json
data/csv/: sbce_config.csv  sbce_config.xlsx  sbce_config_template.xlsx
data/xlsx/: sbce_config.xlsx  sbce_config_esxi_ems+sbce_template.xlsx  sbce_config_esxi_sbce_template.xlsx  sbce_config_esxi_standalone_template.xlsx  sbce_config_kvm_ems+sbce_template.xlsx  sbce_config_kvm_ems1_sbce1_ems2_sbce2_template.xlsx  sbce_config_kvm_ems_emssec_template.xlsx  sbce_config_kvm_ems_sbce1_sbce2_sbce3_template.xlsx  sbce_config_kvm_ems_sbce1_sbce2_template.xlsx  sbce_config_kvm_ems_sbce1_template.xlsx  sbce_config_kvm_ems_template.xlsx  sbce_config_kvm_emssec_template.xlsx  sbce_config_kvm_sbce_template.xlsx  sbce_config_kvm_standalone_template.xlsx  sbce_config_wrong.xlsx
inventories/lab/: hosts.yml
inventory/: hosts.yml
module_utils/: crypto.js  crypto.py  initial_install_sbce.py  initial_login.py  initial_sbce_web_setup.py  initial_ucsec_login.py  initial_ucsec_login.sh  login.py  read_xlsx.py  vmware_console_keyboard_tester.py  vmware_console_keyboard_utils.py  webui_query.py
playbooks/: complete_esxi_console_install.yml  deploy_ova.yml  deploy_sbce_esxi.yml  deploy_sbce_on_esxi.yml  parse_sbce_config.yml  test_deploy_esxi.yml
scripts/: build_topology.py
utils/: deploy_sbce_esxi_ova.py  init_setup_esxi.py  validate_sbce_config.py
(+57 files in other folders)
