[project]
name = "sbce-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "ansible==9.*",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
    "pyvmomi>=9.0.0.0",
    "requests>=2.32.5",
]
